# whatsapp-service

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  gunicorn_config.py  pyproject.toml  rungunicorn.sh
whatsapp/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
whatsapp/migrations/: 0001_initial.py
whatsapp_integration/: .env  .env.example  asgi.py  celery.py  settings.py  urls.py  wsgi.py
